[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/menu/textures/base.png" type="Texture" id=1]
[ext_resource path="res://fonts/DisposableDroidBB_bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/menu/pause_menu.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[node name="Pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="translucent_black" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 270.0
color = Color( 0, 0, 0, 0.313726 )

[node name="body" type="NinePatchRect" parent="."]
margin_left = 204.0
margin_top = 113.0
margin_right = 276.0
margin_bottom = 157.0
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="container" type="VBoxContainer" parent="body"]
margin_left = 8.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 36.0
custom_constants/separation = 0

[node name="continue" type="Button" parent="body/container"]
margin_right = 56.0
margin_bottom = 14.0
focus_neighbour_top = NodePath("../quit")
focus_neighbour_bottom = NodePath("../quit")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
text = "CONTINUE"
flat = true

[node name="quit" type="Button" parent="body/container"]
margin_top = 14.0
margin_right = 56.0
margin_bottom = 28.0
focus_neighbour_top = NodePath("../continue")
focus_neighbour_bottom = NodePath("../continue")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
text = "TITLE"
flat = true

[node name="click" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="body/container/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="body/container/quit" to="." method="_on_quit_pressed"]
